# GLTemplate

./: CMakeLists.txt  gl3w_gen.py
Xcode/: CMakeCache.txt  cmake_install.cmake
Xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
Xcode/Debug/: a
Xcode/ShadowMap.build/Debug/ALL_BUILD.build/: Script-D824A7EA39CB43179A5A6438.sh  dgph
Xcode/ShadowMap.build/Debug/ZERO_CHECK.build/: Script-0165E3EC4723436D9249FEF0.sh  dgph
Xcode/ShadowMap.build/Debug/a.build/: dgph
Xcode/ShadowMap.build/Debug/a.build/Objects-normal/x86_64/: BaseApp.d  BaseApp.dia  BasicTech.d  Camera.d  DrawTriangle.d  DrawTriangle.dia  LightTech.d  Mat.d  Mesh.d  Quaternion.d  ShadowMapFBO.d  ShadowMapFBO.dia  Technique.d  TestGLSL.d  TestGLSL.dia  TestOnlyVBO.d  TestOnlyVBO.dia  Texture.d  Utils.d  Vec2.d  Vec3.d  a.LinkFileList  main.d  main.dia
Xcode/ShadowMap.xcodeproj/: project.pbxproj
Xcode/ShadowMap.xcodeproj/project.xcworkspace/xcshareddata/: ShadowMap.xccheckout
Xcode/ShadowMap.xcodeproj/project.xcworkspace/xcuserdata/dai.xcuserdatad/: UserInterfaceState.xcuserstate
Xcode/ShadowMap.xcodeproj/xcuserdata/dai.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  a.xcscheme  xcschememanagement.plist
assets/: lighting.fs  lighting.vs  monkey.blend  monkey.blend1  test.frag  test.vs
depens/glew/: readme.md
depens/glfw/libs/: libglfw.dylib
src/: BaseApp.cpp  BaseApp.h  BasicLight.h  BasicTech.cpp  BasicTech.h  Camera.cpp  Camera.h  DrawTriangle.cpp  DrawTriangle.h  LightTech.cpp  LightTech.h  Mat.cpp  Mat.h  Mesh.cpp  Mesh.h  MyDefines.h  MyHead.h  Quaternion.cpp  Quaternion.h  ShadowMapFBO.cpp  ShadowMapFBO.h  Technique.cpp  Technique.h  TestGLSL.cpp  TestGLSL.h  TestOnlyVBO.cpp  TestOnlyVBO.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  main.cpp
